(cont) ebay desc

--- a/eBay-Listing/description.html
+++ b/eBay-Listing/description.html
@@ -1,24 +1,42 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<div style="border: 20px groove rgb(0, 0, 0); background: rgb(204, 204, 204);">
-<div style="padding: 40px;"></div>
-<div align="center" style="">
+<div align="center" style="border: 20px groove #909ab8; background: rgb(204, 204, 204);">
 <font rwr="1" size="4" style="font-family: Verdana;">
+
+<!-- HEADER -->
+<div style="padding: 40px;"></div>
 <img src="https://usa-auto.herokuapp.com/img/logo.png">
 <div style="padding: 20px;"></div>
 <h1>Wholesale to the Public</h1>
 <div style="padding: 20px;"></div>
+
+<!-- BANNERS -->
 <div style="padding: 5px; background: #000;"></div>
 <img style="width: 100%;" src="https://usa-auto.herokuapp.com/img/eBay/offers.png">
 <div style="padding: 5px; background: #000;"></div>
 <img style="width: 100%;" src="https://usa-auto.herokuapp.com/img/eBay/USPS_shipping.png">
 <img style="width: 100%;" src="https://usa-auto.herokuapp.com/img/eBay/40years.png">
-<img style="width: 100%;" src="https://usa-auto.herokuapp.com/img/eBay/callus.png">
-<font color="#000" size="12em">&nbsp;
+<div style="padding: 5px; background: #000;"></div>
+<img style="width: 100%;" src="https://usa-auto.herokuapp.com/img/banner/banner-2.png">
+<div style="padding: 5px; background: #000;"></div>
+
+<!-- Graphic to HTML; so that user can copy the phone number -->
+<h1 style="font-size: 55px;">
+<div style="padding: 10px;"></div>
 FOR OTHER VEHICLES, SUCH AS:<br>
-<font  size="8em">Ferrari - Rolls Royce - Jaguare - Porsche</font  size="8em">
-</font>
-</font>
+<p style="font-size: 30px;">Ferrari ● Rolls Royce ● Jaguare ● Porsche</p>
+<b>OR</b> for pricing of items not listed
+</h1>
+
 <div style="padding: 50px; background: #000;">
-<font color="#fff" size="12em"> CALL US! (713) 261-7380</font>
+  <font color="#fff" size="12em"> CALL US! (713) 261-7380
+  <br><br><br>
+  Check out USA AUTO SEAT COVER's selection
+  </font>
 </div>
-</div></div>
+
+<img style="width: 100%;" src="https://usa-auto.herokuapp.com/img/banner/banner-3.png">
+<div style="padding: 5px; background: #000;"></div>
+
+</font>
+
+</div>
