--- a/eBay-Listing/description.html
+++ b/eBay-Listing/description.html
@@ -9,6 +9,118 @@
 <h1>Wholesale to the Public</h1>
 <div style="padding: 20px;"></div>
 
+<div style="padding: 5px; background: #000;"></div>
+<div style="background: #fff;">
+  <div style="margin: 0 75px; text-align: left;">
+    <h1 size="30em" style="text-align: center;"><b>PRODUCT SPECIFICATION</b></h1>
+    <div style="padding: 2px; margin: 0; background: #000;"></div>
+    <p>
+
+    <br><br>
+
+    This item is a new custom-made, OEM replacement 2003 2004 2005 2006 Chevy Tahoe Suburban Driver Bottom and Lean Back Vinyl  Seat Cover Tan
+
+    <br><br>
+
+    <b>YEAR:</b> 2003, 2004, 2005, 2006
+
+    <br><br>
+
+    <b>FITS VEHICLES MAKE:</b> GMC, CHEVY
+
+    <br><br>
+
+    <b>MODEL:</b> Tahoe, Suburban, Yukon
+
+    <br><br>
+
+    <b>FITS:</b> Driver's Bottom Seat and Lean Back (Heated and Non-heated seats)
+
+    <br><br>
+
+    <b>MATERIAL:</b> Vinyl
+
+    <br><br>
+
+    <b>COLOR:</b> Shale "Light Neutral Tan" (Trim code # 522 located in your glove compartment Bottom Right, Note: only SUVs)
+
+    <br><br>
+
+    Please note this item is a replacement - not a slip on or pull over and this listing is only for the seat cover,
+
+    <br><br>
+
+    (Foam pad and frame are not included).
+
+    <br><br>
+
+    We also carry the matching Bottom, Armrest & Passenger Side Replacement Covers and We also have this seat in the factory Gray color
+
+    <br><br>
+
+    FREE SHIPPING, Brand New, Never Used !!
+
+    <br><br>
+
+    PROUDLY made in USA (Houston, Tx)
+
+    <br><br>
+
+    <h2 style="text-align: center;"><b>Type of Seats Fitted</b></h2>
+
+    <br><br>
+
+    •	<b>Heated Seats: </b>    Yes, Fits Heated Seats  - Heating mechanism is attached to your seat's cushion, not affecting the new seat cover installed
+
+    <br><br>
+
+    •	<b>Non-Heated: </b>      Yes, Fits Non-Heated Seats Trucks
+
+    <br><br>
+
+    •	<b>Power Seats: </b>     Yes, Fits Power Seats - You'll make a small cut, this cut will be hidden under the trim
+
+    <br><br>
+
+    • <b>Manual Seats: </b>   Yes, Fits Manual Seat
+
+    <br><br>
+
+    Any wrinkles seen in the pictures is from being in a box and guaranteed to disappear once installed Correctly.
+
+    <br><br>
+
+    <div style="padding: 2px; margin: 0; background: #000;"></div>
+
+    <h2 style="text-align: center;"><b>OTHER SEAT COVERS</b></h2>
+
+    <table>
+      <tr>
+        <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Cosmic_latte_Illuminant_E_gamma.svg/100px-Cosmic_latte_Illuminant_E_gamma.svg.png"></th>
+        <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Cosmic_latte_Illuminant_E_gamma.svg/100px-Cosmic_latte_Illuminant_E_gamma.svg.png"></th>
+        <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Cosmic_latte_Illuminant_E_gamma.svg/100px-Cosmic_latte_Illuminant_E_gamma.svg.png"></th>
+        <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Cosmic_latte_Illuminant_E_gamma.svg/100px-Cosmic_latte_Illuminant_E_gamma.svg.png"></th>
+        <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Cosmic_latte_Illuminant_E_gamma.svg/100px-Cosmic_latte_Illuminant_E_gamma.svg.png"></th>
+        <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Cosmic_latte_Illuminant_E_gamma.svg/100px-Cosmic_latte_Illuminant_E_gamma.svg.png"></th>
+        <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Cosmic_latte_Illuminant_E_gamma.svg/100px-Cosmic_latte_Illuminant_E_gamma.svg.png"></th>
+        <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Cosmic_latte_Illuminant_E_gamma.svg/100px-Cosmic_latte_Illuminant_E_gamma.svg.png"></th>
+      </tr>
+      <tr>
+        <td>item 1</td>
+        <td>item 2</td>
+        <td>item 3</td>
+        <td>item 4</td>
+        <td>item 5</td>
+        <td>item 6</td>
+        <td>item 7</td>
+        <td>item 8</td>
+      </tr>
+    </table>
+
+    </p>
+  </div>
+</div>
+
 <!-- BANNERS -->
 <div style="padding: 5px; background: #000;"></div>
 <img style="width: 100%;" src="https://usa-auto.herokuapp.com/img/eBay/offers.png">
