--- a/eBay-Listing/description.html
+++ b/eBay-Listing/description.html
@@ -18,23 +18,23 @@
 
 <br><br>
 
-This item is a new custom-made, OEM replacement 2003 2004 2005 2006 Chevy Tahoe Suburban Driver Bottom and Lean Back Vinyl  Seat Cover Tan
+Delete this section and write something down here.
 
 <br><br>
 
-<b>YEAR:</b> 2003, 2004, 2005, 2006
+<font color="red"><b>YEAR:</b> -</font>
 
 <br><br>
 
-<b>FITS VEHICLES MAKE:</b> GMC, CHEVY
+<b>FITS VEHICLES MAKE:</b> -
 
 <br><br>
 
-<b>MODEL:</b> Tahoe, Suburban, Yukon
+<b>MODEL:</b> -
 
 <br><br>
 
-<b>FITS:</b> Driver's Bottom Seat and Lean Back (Heated and Non-heated seats)
+<b>FITS:</b> -
 
 <br><br>
 
@@ -42,27 +42,27 @@ This item is a new custom-made, OEM replacement 2003 2004 2005 2006 Chevy Tahoe 
 
 <br><br>
 
-<b>COLOR:</b> Shale "Light Neutral Tan" (Trim code # 522 located in your glove compartment Bottom Right, Note: only SUVs)
+<b>COLOR:</b> -
 
 <br><br>
 
-Please note this item is a replacement - not a slip on or pull over and this listing is only for the seat cover,
+<b>Item quality:</b> -
 
 <br><br>
 
-(Foam pad and frame are not included).
+<b>What is and is not included:</b> -
 
 <br><br>
 
-We also carry the matching Bottom, Armrest & Passenger Side Replacement Covers and We also have this seat in the factory Gray color
+<b>Matching items we have in our store:</b> -
 
 <br><br>
 
-FREE SHIPPING, Brand New, Never Used !!
+<b>Shipping:</b> -
 
 <br><br>
 
-PROUDLY made in USA (Houston, Tx)
+<b>Made in USA (Houston, Tx)</b>
 
 <br><br>
 
@@ -72,20 +72,20 @@ PROUDLY made in USA (Houston, Tx)
 
 <table style="width: 100%; padding: 8px;">
 <tr>
-<th>Heated Seats:</th>
-<th>Yes, Fits Heated Seats  - Heating mechanism is attached to your seat's cushion, not affecting the new seat cover installed</th>
+<td style="width: 20%;"> Heated Seats:</td>
+<td>-</td>
 </tr>
 <tr style="background-color: #ddd">
-<td>Non-Heated:</td>
-<td>Yes, Fits Non-Heated Seats Trucks</td>
+<td> Non-Heated:</td>
+<td>-</td>
 </tr>
 <tr>
-<th>Power Seats:</th>
-<th>Yes, Fits Power Seats - You'll make a small cut, this cut will be hidden under the trim</th>
+<td> Power Seats:</td>
+<td>-</td>
 </tr>
 <tr style="background-color: #ddd">
-<td>Manual Seats:</td>
-<td>Yes, Fits Manual Seat</td>
+<td> Manual Seats:</td>
+<td>-</td>
 </tr>
 </table>
 
@@ -95,42 +95,20 @@ Any wrinkles seen in the pictures is from being in a box and guaranteed to disap
 
 <br><br>
 
-<div style="padding: 2px; margin: 0; background: #000;"></div>
-
-<h2 style="text-align: center;"><b>OTHER SEAT COVERS</b></h2>
-
-<table>
-  <tr>
-    <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Cosmic_latte_Illuminant_E_gamma.svg/100px-Cosmic_latte_Illuminant_E_gamma.svg.png"></th>
-    <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Cosmic_latte_Illuminant_E_gamma.svg/100px-Cosmic_latte_Illuminant_E_gamma.svg.png"></th>
-    <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Cosmic_latte_Illuminant_E_gamma.svg/100px-Cosmic_latte_Illuminant_E_gamma.svg.png"></th>
-    <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Cosmic_latte_Illuminant_E_gamma.svg/100px-Cosmic_latte_Illuminant_E_gamma.svg.png"></th>
-    <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Cosmic_latte_Illuminant_E_gamma.svg/100px-Cosmic_latte_Illuminant_E_gamma.svg.png"></th>
-    <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Cosmic_latte_Illuminant_E_gamma.svg/100px-Cosmic_latte_Illuminant_E_gamma.svg.png"></th>
-    <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Cosmic_latte_Illuminant_E_gamma.svg/100px-Cosmic_latte_Illuminant_E_gamma.svg.png"></th>
-    <th><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Cosmic_latte_Illuminant_E_gamma.svg/100px-Cosmic_latte_Illuminant_E_gamma.svg.png"></th>
-  </tr>
-  <tr>
-    <td>item 1</td>
-    <td>item 2</td>
-    <td>item 3</td>
-    <td>item 4</td>
-    <td>item 5</td>
-    <td>item 6</td>
-    <td>item 7</td>
-    <td>item 8</td>
-  </tr>
-</table>
 
 </p>
 </div>
+<div style="padding: 5px; background: #000;"></div>
 </div>
 
 <!-- BANNERS -->
-<div style="padding: 5px; background: #000;"></div>
 <img style="width: 100%;" src="https://usa-auto.herokuapp.com/img/eBay/offers.png">
 <div style="padding: 5px; background: #000;"></div>
-<img style="width: 100%;" src="https://usa-auto.herokuapp.com/img/eBay/USPS_shipping.png">
+<br><br><br>
+<font size="12em"><b>1-3 Day Priority Shipping</b><font>
+<br><br><br>
+<div style="padding: 5px; background: #000;"></div>
+<!-- <img style="width: 100%;" src="https://usa-auto.herokuapp.com/img/eBay/USPS_shipping.png"> -->
 <img style="width: 100%;" src="https://usa-auto.herokuapp.com/img/eBay/40years.png">
 <div style="padding: 5px; background: #000;"></div>
 <img style="width: 100%;" src="https://usa-auto.herokuapp.com/img/banner/banner-2.png">
@@ -145,9 +123,16 @@ FOR OTHER VEHICLES, SUCH AS:<br>
 </h1>
 
 <div style="padding: 50px; background: #000;">
-<font color="#fff" size="12em"> CALL US! (713) 261-7380
+<font color="#fff" size="12em"> CALL US! (713) 261-7380<br>
+<font color="#fff" size="1em"><br></font>
+OUR GOAL IS 5 STARS
+<font color="#fff" size="1em"><br></font>
+<h1 style="color: yellow;">★ ★ ★ ★ ★</h1>
+<font color="#fff" size="1em"><br></font>
+We're looking for 100% positive feedback.
 <br><br><br>
-Check out USA AUTO SEAT COVER's selection
+Check out USA AUTO SEAT COVER's selection<br>
+
 </font>
 </div>
 
