ebay item desc update

--- a/eBay-Listing/description.html
+++ b/eBay-Listing/description.html
@@ -9,6 +9,19 @@
 <h1>Wholesale to the Public</h1>
 <div style="padding: 20px;"></div>
 
+<div style="padding: 50px; background: #000;">
+<span style="text-align: left;">
+<h4><font style="color: yellow; padding-left: 35%;">★ ★ ★ ★ ★</font> -- <font color="#fff" size=".5em">240 Item as described</font></h4>
+<h4><font style="color: yellow; padding-left: 35%;">★ ★ ★ ★ ★</font> --  <font color="#fff" size=".5em">240 Communication</font></h4>
+<h4><font style="color: yellow; padding-left: 35%;">★ ★ ★ ★ ★</font> -- <font color="#fff" size=".5em">255 Shipping time</font></h4>
+<h4><font style="color: yellow; padding-left: 35%;">★ ★ ★ ★ ★</font> -- <font color="#fff" size=".5em">256 Shipping charges</font></h4>
+</span>
+<font color="#fff" size=".5em"><br></font>
+<font color="#fff" size=".5em">USA AUTO SEAT COVER evaluated today by eBay:</font> <font color="#00f000" size=".5em">Top Rated</font>
+
+</font>
+</div>
+
 <div style="background: #fff;">
 <div style="padding: 5px; background: #000;"></div>
 <div style="margin: 0 75px; text-align: left;">
