--- a/Animations/particles/index.html
+++ b/Animations/particles/index.html
@@ -4,18 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>particle.js with multiple colors</title>
-  
-  
-  
-      <link rel="stylesheet" href="css/style.css">
-
-  
-</head>
-
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet"></head>
 <body>
-
   <div id="bg"></div>
-
 <section>
 <div class="text">
   <h1>Headline Goes Here</h1>
@@ -23,14 +15,6 @@
 </div>
 </section>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js'></script>
-
-  
-
-    <script  src="js/index.js"></script>
-
-
-
-
+  <script  src="js/index.js"></script>
 </body>
-
 </html>
