React 2019: songs list revisit

--- a/eBay-Listing/description.html
+++ b/eBay-Listing/description.html
@@ -31,131 +31,6 @@
 
 <br><br>
 
-<!--
-<p align="center">
-  <font color="#000000" size="3" style="margin: 0px; padding: 0px; box-sizing: border-box;">
-    <b style="margin: 0px; padding: 0px; box-sizing: border-box;">
-      2000 2001 2002 Chevy Suburban 1500 Driver &amp; Passenger Bottom VINYL Cover Gray
-    </b>
-  </font>
-
-  <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 20px; color: rgb(184, 107, 61);">
-    Years Fitted:&nbsp;
-  </span>
-  <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 18px;">2000 2001 2002</span>
-
-  <br style="margin: 0px; padding: 0px; box-sizing: border-box;">
-
-  <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 20px; color: rgb(184, 107, 61);">
-
-    Make:&nbsp;
-
-    <font color="#000000" style="margin: 0px; padding: 0px; box-sizing: border-box;">Chevy</font>
-
-  </span>
-
-  <br style="margin: 0px; padding: 0px; box-sizing: border-box;">
-
-  <font color="#b86b3d" style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 20px;">Model:&nbsp;</font>
-
-  <font color="#000000" style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 20px;">Tahoe-Suburban</font>
-
-</p>
-
-<p>
-  <font color="#000000" size="3" style="margin: 0px; padding: 0px; box-sizing: border-box;">
-    <b style="margin: 0px; padding: 0px; box-sizing: border-box;">2000 - 2002 Chevy Tahoe LT LS Z71 2WD 4X4</b>
-  </font>
-</p>
-
-<p>
-  <b style="margin: 0px; padding: 0px; box-sizing: border-box;">
-    <font size="3" style="margin: 0px; padding: 0px; box-sizing: border-box;">2000 - 2002 Chevy Suburban 1500 LT LS Z71 2WD 4X4</font>
-  </b>
-</p>
-<p>
-  <b style="margin: 0px; padding: 0px; box-sizing: border-box;">
-    <font size="3" style="margin: 0px; padding: 0px; box-sizing: border-box;">2000 - 2002 Chevy Suburban 2500 LT LS 2WD 4X4</font>
-  </b>
-</p>
-<p>
-  <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 20px; color: rgb(184, 107, 61);">Side Fitted:&nbsp;</span>
-  <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 18px;">Front Driver and Passenger Side &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</span>
-</p>
-
-<p>
-  <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 18px;">
-    <font color="#9e6d49" style="margin: 0px; padding: 0px; box-sizing: border-box;">S</font>
-  </span>
-
-  <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 20px; color: rgb(184, 107, 61);">
-    <font color="#9e6d49" style="margin: 0px; padding: 0px; box-sizing: border-box;">eat</font>
-    <font color="#905400" style="margin: 0px; padding: 0px; box-sizing: border-box;">&nbsp;</font>
-    Cover Type:
-  </span>
-
-  <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 18px;">&nbsp;OEM Replacement &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</span>
-</p>
-
-<p>
-  <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 20px; color: rgb(184, 107, 61);">Material:&nbsp;
-    <font color="#000000" size="4" style="margin: 0px; padding: 0px; box-sizing: border-box;">Synthetic&nbsp;</font>
-  </span>
-
-  <font color="#000000" style="margin: 0px; padding: 0px; box-sizing: border-box;">Leather &nbsp;</font>
-  <font color="#000000" size="3" style="margin: 0px; padding: 0px; box-sizing: border-box;">&nbsp;</font>
-
-  <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 18px;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;</span>
-</p>
-<p>
-  <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 20px; color: rgb(184, 107, 61);">Color:&nbsp;
-    <b style="margin: 0px; padding: 0px; box-sizing: border-box;">
-      <font color="#000000" style="margin: 0px; padding: 0px; box-sizing: border-box;">Pewter Gray</font>
-    </b>
-  </span>
-  <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 20px; color: rgb(184, 107, 61);"></span>
-</p>
-<p>
-  <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 20px; color: rgb(184, 107, 61);">Manufactured:</span>
-  <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 18px;">&nbsp;Made in USA shipped out of our&nbsp;
-    <b style="margin: 0px; padding: 0px; box-sizing: border-box;">Houston, TX</b>&nbsp;facility. &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;</span>
-  </p>
-  <p>
-    <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 20px; color: rgb(184, 107, 61);">Heated Seats:</span>
-    <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 18px;">&nbsp;Fits Heated Seats and Non Heated Seats &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;</span>
-  </p>
-  <p>
-    <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 20px; color: rgb(184, 107, 61);">Power Seats:</span>
-    <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 18px;">&nbsp;Fits Power Seats and Non Power Seats Vehicles</span>
-    <br style="margin: 0px; padding: 0px; box-sizing: border-box;">
-  </p>
-  <p>
-    <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 18px; color: rgb(184, 107, 61);">Seat Covers's Attached Padding:&nbsp;</span>
-    <font size="5" style="margin: 0px; padding: 0px; box-sizing: border-box;">
-      <b style="margin: 0px; padding: 0px; box-sizing: border-box;">½</b>
-    </font>
-    <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 18px;">&nbsp;
-      <b style="margin: 0px; padding: 0px; box-sizing: border-box;">Inch</b>&nbsp;attached foam padding
-    </span>
-    <br style="margin: 0px; padding: 0px; box-sizing: border-box;"></p>
-    <p style="margin: 15px 0px; padding: 0px; box-sizing: border-box; font-family: Lato, sans-serif; font-size: medium;">
-      <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 18px; color: rgb(184, 107, 61);">Please call:</span>
-      <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 18px;">&nbsp;
-        <b style="margin: 0px; padding: 0px; box-sizing: border-box;">(832) 790-4949&nbsp;</b>
-        for Matching Lean Back &amp; Passenger Side
-      </span>
-    </p>
-    <p>
-      <i style="margin: 0px; padding: 0px; box-sizing: border-box;">
-        <span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: 13.5pt; font-family: Calibri, sans-serif;">Monday to Friday: 9 AM to 6 PM CST<br style="margin: 0px; padding: 0px; box-sizing: border-box;">Saturday: 10 AM to 4 PM CST<br style="margin: 0px; padding: 0px; box-sizing: border-box;">Sunday: 10 AM to 4 PM CS</span>
-      </i>
-    </p>
-
-    <p style="margin: 15px 0px; padding: 0px; box-sizing: border-box; font-family: Lato, sans-serif; font-size: 18px;">
-      <span style="margin: 0px; padding: 0px; box-sizing: border-box; color: rgb(184, 107, 61); font-size: 20px;">About Installation:</span>&nbsp;</p><p style="margin: 15px 0px; padding: 0px; box-sizing: border-box; font-family: Lato, sans-serif; font-size: 18px;"><i style="margin: 0px; padding: 0px; box-sizing: border-box;">Installation Takes About 20-30 Minutes</i></p><p style="margin: 15px 0px; padding: 0px; box-sizing: border-box; font-family: Lato, sans-serif; font-size: 18px;"><span style="margin: 0px; padding: 0px; box-sizing: border-box; color: rgb(184, 107, 61); font-size: 20px;">Tools Required:</span>&nbsp;</p><p style="margin: 15px 0px; padding: 0px; box-sizing: border-box; font-family: Lato, sans-serif; font-size: 18px;">Snips, Flat Head Screw Driver, Phillips Screw Driver, Socket, Wrench &amp; Drill.</p><p style="margin: 15px 0px; padding: 0px; box-sizing: border-box; font-family: Lato, sans-serif; font-size: 18px;"><span style="margin: 0px; padding: 0px; box-sizing: border-box; color: rgb(184, 107, 61); font-size: 20px;">Installation Instructions:</span>&nbsp;Provided in the package. Video Available Upon Request&nbsp;</p><p style="margin: 15px 0px; padding: 0px; box-sizing: border-box; font-family: Lato, sans-serif; font-size: 18px;"><span style="margin: 0px; padding: 0px; box-sizing: border-box; color: rgb(184, 107, 61); font-size: 20px;">More Information:</span>&nbsp;Actual Replacement Cover, Not A Slip On or Pullover, You will Remove The Old Cover &amp; Then Install the New Cover.&nbsp;<a href="https://my.ebay.com/ws/eBayISAPI.dll?AcceptSavedSeller&amp;sellerid=usautonation&amp;refid=store&amp;ssPageName=STORE:HTMLBUILDER:SIMPLEPAGE" style="margin: 0px; padding: 0px; box-sizing: border-box; font-family: Arial, sans-serif; font-size: small; color: rgb(52, 101, 1) !important; text-decoration-line: none !important;">Add us to your Favorites list</a></p><p style="margin: 15px 0px; padding: 0px; box-sizing: border-box; font-family: Lato, sans-serif; font-size: 18px;"><a href="https://my.ebay.com/ebaymotors/ws/eBayISAPI.dll?AcceptSavedSeller&amp;linkname=includenewsletter&amp;sellerid=usautonation" target="_blank" style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: large; font-family: Georgia; color: rgb(52, 101, 1) !important; text-decoration-line: none !important;">Sign up for my email newsletters</a><span style="margin: 0px; padding: 0px; box-sizing: border-box; font-size: large; font-family: Georgia;">&nbsp;by adding my eBay Store to your Favorites.</span></p><h3 style="margin: 0px 0px 18px; padding: 0px; box-sizing: border-box; color: rgb(52, 101, 1); font-size: 14px; text-transform: uppercase; font-family: Arial, Helvetica, sans-serif;">PAYMENT:</h3><p style="margin: 15px 0px; padding: 0px; box-sizing: border-box; font-family: Arial, Helvetica, sans-serif;">eBay accepts credit cards and transfers from your available PayPal Payments account balance. Credit cards currently accepted include Visa, MasterCard, Discover, American Express &amp; PayPal Credit Card.Please note when processing payments online, credit and debit cards are handled the same, as long as they are issued by a major card brand. Because PINs cannot be accepted online, debit cards will always be run as credit.</p><h3 style="margin: 0px 0px 18px; padding: 0px; box-sizing: border-box; color: rgb(52, 101, 1); font-size: 14px; text-transform: uppercase; font-family: Arial, Helvetica, sans-serif;">SHIPPING:</h3><p style="margin: 15px 0px; padding: 0px; box-sizing: border-box; font-family: Arial, Helvetica, sans-serif;">Please allow 1-3 business days to process, inspect, &amp; test fit your order. Shipping will take 2-4 business days. Free Shipping is for US customers only but We also ship worldwide. All of our orders are shipped through USPS. If you would like a shipping quote messages us or give us a call at (832) 790-4949 &amp; We will get back to you with your shipping quote.</p><h3 style="margin: 0px 0px 18px; padding: 0px; box-sizing: border-box; color: rgb(52, 101, 1); font-size: 14px; text-transform: uppercase; font-family: Arial, Helvetica, sans-serif;">RETURNS:</h3><p style="margin: 15px 0px; padding: 0px; box-sizing: border-box; font-family: Arial, Helvetica, sans-serif;">In an event a customer would like a return US Auto Nation will send out a Return Label at no cost, once the customer has mailed back the product US Auto Nation will refund the Account, Credit Card, Debit Card, and or PayPal Account.</p><h3 style="margin: 0px 0px 18px; padding: 0px; box-sizing: border-box; color: rgb(52, 101, 1); font-size: 14px; text-transform: uppercase; font-family: Arial, Helvetica, sans-serif;">TIPS ON MAINTAINING YOUR LEATHER SEATS :</h3><p style="margin: 15px 0px; padding: 0px; box-sizing: border-box; font-family: Arial, Helvetica, sans-serif;">What Is Proper Leather Care?</p><p style="margin: 15px 0px; padding: 0px; box-sizing: border-box; font-family: Arial, Helvetica, sans-serif;">Leather surfaces are just like beautiful, delicate skin. Leather must be carefully cleansed before it can be properly conditioned. As leather ages, it loses essential protectants infused into the leather during the manufacturing process. That leaves the leather susceptible to dirt, oils, and UV damage. To keep leather looking and feeling its best, you must first clean it and then replace the lost moisture and protection.</p><p style="margin: 15px 0px; padding: 0px; box-sizing: border-box; font-family: Arial, Helvetica, sans-serif;">1. Agitation, not scrubbing, is the key. This agitation opens pores and allows dirt and body oils to rise to the surface of the leather where it can be2. The application of a quality conditioner is key, market leaders, Wolfgang Leather Care Conditioner or Pinnacle Leather Conditioner. These conditioners are calibrated to nourish and moisturize. Proper conditioning allows fibers to retain flexibility and softness.3. With a little time and the right chemicals, your vehicle's leather will remain soft, supple, and inviting for years to come!</p><h3 style="margin: 0px 0px 18px; padding: 0px; box-sizing: border-box; color: rgb(52, 101, 1); font-size: 14px; text-transform: uppercase; font-family: Arial, Helvetica, sans-serif;">OUR GOAL:</h3><p>
-</p><p style="margin: 15px 0px; padding: 0px; box-sizing: border-box; font-family: Arial, Helvetica, sans-serif;">We strive for 5 Star Customer Service; your wish is our command! We are here to make sure you are 100% satisfied with your purchase. If you are ever unhappy with your purchase, please let us know WE WILL GLADLY FIX IT! And of course if you are totally satisfied with our customer service positive feedback is always welcomed.</p><h2 style="text-align: center;">
--->
-
 <p align="center">2000 2001 2002 Chevy Suburban 1500 Driver & Passenger Bottom VINYL Cover Gray</p>
 
 <p style="color: rgb(184, 107, 61);">
@@ -179,7 +54,7 @@
 <span style="font-size: 20px;">Heated Seats: <span style="font-size: 18px; color: #000;">Fits Heated Seats and Non Heated Seats</span></span><br>
 <span style="font-size: 20px;">Power Seats: <span style="font-size: 18px; color: #000;">Fits Power Seats and Non Power Seats Vehicles</span></span><br>
 <span style="font-size: 20px;">Seat Covers's Attached Padding: <span style="font-size: 18px; color: #000;">Inch attached foam padding</span></span><br>
-<span style="font-size: 20px;">Please call: <span style="font-size: 18px; color: #000;">(832) 790-4949 for Matching Lean Back & Passenger Side</span></span><br>
+<span style="font-size: 20px;">Please call: <span style="font-size: 18px; color: #000;">713-261-7380 for Matching Lean Back & Passenger Side</span></span><br>
 </p>
 
 <i>Monday to Friday: 9 AM to 6 PM CST</i><br>
@@ -205,16 +80,14 @@ Sign up for my email newsletters by adding my eBay Store to your Favorites.
 eBay accepts credit cards and transfers from your available PayPal Payments account balance. Credit cards currently accepted include Visa, MasterCard, Discover, American Express & PayPal Credit Card.Please note when processing payments online, credit and debit cards are handled the same, as long as they are issued by a major card brand. Because PINs cannot be accepted online, debit cards will always be run as credit.
 <br><br>
 <h3 style="margin: 0px 0px 18px; padding: 0px; box-sizing: border-box; color: rgb(52, 101, 1); font-size: 14px; text-transform: uppercase; font-family: Arial, Helvetica, sans-serif;">SHIPPING:</h3>
-Please allow 1-3 business days to process, inspect, & test fit your order. Shipping will take 2-4 business days. Free Shipping is for US customers only but We also ship worldwide. All of our orders are shipped through USPS. If you would like a shipping quote messages us or give us a call at (832) 790-4949 & We will get back to you with your shipping quote.
+Please allow 1-3 business days to process, inspect, & test fit your order. Shipping will take 2-4 business days. Free Shipping is for US customers only but We also ship worldwide. All of our orders are shipped through USPS. If you would like a shipping quote messages us or give us a call at 713-261-7380 & We will get back to you with your shipping quote.
 <br><br>
+
 <h3 style="margin: 0px 0px 18px; padding: 0px; box-sizing: border-box; color: rgb(52, 101, 1); font-size: 14px; text-transform: uppercase; font-family: Arial, Helvetica, sans-serif;">RETURNS:</h3>
-In an event a customer would like a return US Auto Nation will send out a Return Label at no cost, once the customer has mailed back the product US Auto Nation will refund the Account, Credit Card, Debit Card, and or PayPal Account.
+In an event a customer would like a return US Auto Nation will send out a Return Label at no cost, once the customer has mailed back the product US Auto Seat Cover will refund the Account, Credit Card, Debit Card, and or PayPal Account.
 <br><br>
 <h3 style="margin: 0px 0px 18px; padding: 0px; box-sizing: border-box; color: rgb(52, 101, 1); font-size: 14px; text-transform: uppercase; font-family: Arial, Helvetica, sans-serif;">TIPS ON MAINTAINING YOUR LEATHER SEATS :</h3>
-What Is Proper Leather Care?
-<br><br>
-Leather surfaces are just like beautiful, delicate skin. Leather must be carefully cleansed before it can be properly conditioned. As leather ages, it loses essential protectants infused into the leather during the manufacturing process. That leaves the leather susceptible to dirt, oils, and UV damage. To keep leather looking and feeling its best, you must first clean it and then replace the lost moisture and protection.
-<br><br>
+
 1. Agitation, not scrubbing, is the key. This agitation opens pores and allows dirt and body oils to rise to the surface of the leather where it can be2. The application of a quality conditioner is key, market leaders, Wolfgang Leather Care Conditioner or Pinnacle Leather Conditioner. These conditioners are calibrated to nourish and moisturize. Proper conditioning allows fibers to retain flexibility and softness.3. With a little time and the right chemicals, your vehicle's leather will remain soft, supple, and inviting for years to come!
 
 <h3 style="margin: 0px 0px 18px; padding: 0px; box-sizing: border-box; color: rgb(52, 101, 1); font-size: 14px; text-transform: uppercase; font-family: Arial, Helvetica, sans-serif;">OUR GOAL:</h3>
@@ -245,7 +118,11 @@ We strive for 5 Star Customer Service; your wish is our command! We are here to 
 
 <br><br>
 
-Any wrinkles seen in the pictures is from being in a box and guaranteed to disappear once installed Correctly.
+This is an actual seat cover, this is not a slip on. This is a replacement for the original seat cover. This isn't the original, this is a hand crafted rendition of the original.
+
+<br><br>
+
+Any wrinkles seen in the pictures is from being in a box and guaranteed to disappear once installed Correctly. The picture you see is not the seat you're purchasing, but you will recieve an identically crafted seat cover like the one you see in the image. Please read the title description to see what kind of seat cover you're recieving, including what makes and models the sea cover is tailored for.
 
 <br><br>
 
