--- a/eBay-Listing/description.html
+++ b/eBay-Listing/description.html
@@ -136,8 +136,16 @@ Any wrinkles seen in the pictures is from being in a box and guaranteed to disap
 <img style="width: 100%;" src="https://usa-auto.herokuapp.com/img/eBay/offers.png">
 <div style="padding: 5px; background: #000;"></div>
 <br><br><br>
+
+<div style='box-sizing: border-box; content: ""; display: table; clear: both;'>
+<div style="box-sizing: border-box; float: left; width: 50%; padding: 10px; height: 300px;" style="background-color:#aaa;">
+<img src="https://github.com/ampourgh/Full-Stack-Web-Development/blob/master/eBay-Listing/USPS_shipping.png?raw=true" alt="USPS shipping">
+</div>
+<div style="box-sizing: border-box; float: left; width: 50%; padding: 10px; height: 300px;" style="background-color:#bbb;">
 <font size="12em"><b>1-3 Day Priority Shipping</b><font>
-<br><br><br>
+</div>
+</div>
+
 <div style="padding: 5px; background: #000;"></div>
 <!-- <img style="width: 100%;" src="https://usa-auto.herokuapp.com/img/eBay/USPS_shipping.png"> -->
 <img style="width: 100%;" src="https://usa-auto.herokuapp.com/img/eBay/40years.png">
