adjust car animation

--- a/Animations/car-drive/index.htm
+++ b/Animations/car-drive/index.htm
@@ -12,12 +12,12 @@
 </head>
 
 <body>
-
+  <h1 class="headerTitle">Header Title</h1>
   <div class="background">
-    <h1 class="headerTitle">Header Title</h1>
-  	<img src="car.svg" class="car">
-  	<img src="truck.svg" class="car-2">
+    <div class="color-bg">
+    	<img src="car-r.svg" class="car">
+    	<img src="truck.svg" class="truck">
+    </div>
   </div>
-
 </body>
 </html>
