--- a/JavaScript-Dark-Mode/index.html
+++ b/JavaScript-Dark-Mode/index.html
@@ -6,8 +6,66 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>on-click dark mode</title>
   <link rel="stylesheet" href="./css/style.css">
+  <style>
+  .switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+
+  .slider {
+    border-radius: 30px;
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    transition: .4s;
+  }
+
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    transition: .4s;
+    border-radius: 30px;
+
+  }
+
+  input:checked + .slider {
+    background-color: #5BC236;
+
+  }
+
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+
+  input:checked + .slider:before {
+    transform: translateX(26px);
+  }
+
+</style>
 </head>
 <body>
+  <label class="switch">
+    <input type="checkbox" id="checkbox" onclick="toggle()">
+    <span class="slider"></span>
+  </label>
+
   <button onclick="myFunction()">Click me</button>
   <script src="js/index.js"></script>
 </body>
@@ -26,5 +84,5 @@
 ?>
 
 <form action="index.php" method="get">
-  <input type="toggle" type="submit">
+  <input type="button" name="toggle" type="submit">
 </form>
